--- a/style.css
+++ b/style.css
@@ -5,51 +5,17 @@
   align-items: center;
   min-height: 97vh;
 }
+
 .container {
   height: min-content;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.12);
+  padding: 25px;
+  border-radius: 12px;
 }
-/* .container {
-    width: 575px;
-    height: 825px;
-    padding-left: 30px;
-  }
-  #height,
-  #weight {
-    width: 150px;
-    height: 25px;
-    margin-top: 30px;
-  }
-  
-  #weight-guide {
-    margin-left: 75px;
-    margin-top: 25px;
-  }
-  
-  #results {
-    font-size: 35px;
-    margin-left: 90px;
-    margin-top: 20px;
-    color: rgb(241, 241, 241);
-  }
-  
-  button {
-    width: 150px;
-    height: 35px;
-    margin-left: 90px;
-    margin-top: 25px;
-    background-color: #fff;
-    padding: 1px 30px;
-    border-radius: 8px;
-    color: #212121;
-    text-decoration: none;
-    border: 2px solid #212121;
-  
-    font-size: 25px;
-  }
-  
-  h1 {
-    padding-left: 15px;
-    padding-top: 25px;
-    
-  }
-   */
+
+.container > h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
